Fix radio inputs width causing options to overflow; restrict width=100% to non-radio inputs

--- a/app/globals.css
+++ b/app/globals.css
@@ -153,7 +153,7 @@ label {
   font-weight: 700;
 }
 
-input,
+input:not([type="radio"]):not([type="checkbox"]),
 select,
 textarea {
   width: 100%;
@@ -198,6 +198,7 @@ textarea {
 
 .opt input {
   flex: 0 0 auto;
+  width: auto !important;
   margin-top: 2px;
 }
 
